2026-02-01  Dirk Eddelbuettel  <edd@debian.org>

	* demo/chronometre.R: Remove unconditional virtualenv usage
	instruction replaced by preceding conditional block

2026-01-30  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add badges for CRAN, downloads, dependencies, pypi

2026-01-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): Initial (functional) 0.0.1 release
	* demo/chronometre.R: Demo of stopwatch use and Python 'exchange'
	* inst/tinytest/test_stopwatch.R: Initial tests